--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,46 @@ dependencies {
     // If you want to additionally use the CameraX Extensions library
     implementation "androidx.camera:camera-extensions:1.0.0-alpha22"
 
+    // MLKit
+    // Barcode model
+    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
+    // Or comment the dependency above and uncomment the dependency below to
+    // use unbundled model that depends on Google Play Services
+    // implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:16.1.2'
+
+    // Object detection feature with bundled default classifier
+    implementation 'com.google.mlkit:object-detection:16.2.3'
+
+    // Object detection feature with custom classifier support
+    implementation 'com.google.mlkit:object-detection-custom:16.3.1'
+
+    // Face features
+    implementation 'com.google.mlkit:face-detection:16.0.6'
+    // Or comment the dependency above and uncomment the dependency below to
+    // use unbundled model that depends on Google Play Services
+    // implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.1.1'
+
+    // Text features
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.3'
+
+    // Image labeling with automl model support
+    implementation 'com.google.mlkit:image-labeling-automl:16.2.1'
+
+    // Image labeling
+    implementation 'com.google.mlkit:image-labeling:17.0.3'
+    // Or comment the dependency above and uncomment the dependency below to
+    // use unbundled model that depends on Google Play Services
+    // implementation 'com.google.android.gms:play-services-mlkit-image-labeling:16.0.0'
+
+    // Image labeling custom
+    implementation 'com.google.mlkit:image-labeling-custom:16.3.1'
+
+    // Pose detection with default models
+    implementation 'com.google.mlkit:pose-detection:17.0.0'
+    // Pose detection with accurate models
+    implementation 'com.google.mlkit:pose-detection-accurate:17.0.0'
+
+
 }
 repositories {
     mavenCentral()
