--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,8 @@ dependencies {
     // Pose detection with accurate models
     implementation 'com.google.mlkit:pose-detection-accurate:17.0.0'
 
+    // Volley
+    implementation 'com.android.volley:volley:1.2.0'
 
 }
 repositories {
