added product consumption effects fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ dependencies {
     // Volley
     implementation 'com.android.volley:volley:1.2.0'
 
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 repositories {
     mavenCentral()
