--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,12 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
 
     implementation 'com.google.firebase:firebase-database'
+
+    // Jsoup
+    implementation 'org.jsoup:jsoup:1.13.1'
+
+
+
 }
 repositories {
     mavenCentral()
