--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodassistant">
-        <activity android:name=".Activities.LogGenericFoodActivity"></activity>
+        <activity android:name=".Activities.RecipeAnalysisActivity"></activity>
+        <activity android:name=".Activities.LogGenericFoodActivity" />
         <activity
             android:name=".Activities.ProductInfoActivity"
             android:label="Product Info"
