--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,13 +86,13 @@ dependencies {
     // implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:16.1.2'
 
     // Object detection feature with bundled default classifier
-    implementation 'com.google.mlkit:object-detection:16.2.3'
+    implementation 'com.google.mlkit:object-detection:16.2.4'
 
     // Object detection feature with custom classifier support
     implementation 'com.google.mlkit:object-detection-custom:16.3.1'
 
     // Face features
-    implementation 'com.google.mlkit:face-detection:16.0.6'
+    implementation 'com.google.mlkit:face-detection:16.0.7'
     // Or comment the dependency above and uncomment the dependency below to
     // use unbundled model that depends on Google Play Services
     // implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.1.1'
@@ -134,7 +134,8 @@ dependencies {
     // Jsoup
     implementation 'org.jsoup:jsoup:1.13.1'
 
-
+    //JetPack design
+    implementation "androidx.cardview:cardview:1.0.0"
 
 }
 repositories {
