--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,9 +134,12 @@ dependencies {
     // Jsoup
     implementation 'org.jsoup:jsoup:1.13.1'
 
-    //JetPack design
+    // JetPack design
     implementation "androidx.cardview:cardview:1.0.0"
 
+    // Fragments
+    def fragment_version = "1.3.4"
+    implementation "androidx.fragment:fragment:$fragment_version"
 }
 repositories {
     mavenCentral()
