added args to ProductConsumptionEffects Fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodassistant">
-        <activity android:name=".Activities.LogCustomMealActivity"></activity>
-        <activity android:name=".Activities.RecipeAnalysisActivity" />
+        <activity android:name=".Activities.LogCustomMealActivity" />
         <activity android:name=".Activities.LogGenericFoodActivity" />
         <activity
             android:name=".Activities.ProductInfoActivity"
